# claude-gemini-proxy

./: .env  .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  Dockerfile  README.md  claudegemini.sh  debug_test.py  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  test_api.py  test_ssl.py
monitoring/: prometheus.yml
sample/: server.py
scripts/: setup.sh  start.sh  stop.sh
src/: __init__.py  config.py  converter.py  main.py  models.py  streaming.py  utils.py
src/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
tests/: test_models.py
